# sign-language-gesture-segmentation-yolo26

./: .gitignore  README.md  pyproject.toml
configs/: dataset_seg.yaml
results/: predictions_summary.json
results/evaluation/: evaluation_report.json
results/evaluation/test_predictions/: predictions_log.csv
results/seg/yolo26n-seg-p1/: args.yaml  results.csv
results/seg/yolo26n-seg-p2/: args.yaml  results.csv
src/: __init__.py  app.py  config.py
src/data/: convert.py  download.py  mask_generator.py  preprocess.py  split.py
src/eda/: __init__.py  analysis.py  app.py
src/evaluation/: metrics.py
src/notebooks/: train.ipynb
src/training/: __init__.py  train_seg.py
