[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sign-language-gesture-segmentation-yolo26"
version = "0.1.0"
description = "Sign Language Gesture Segmentation using YOLO26n-seg"
readme = "README.md"
authors = ["M. Fazri Nizar"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.0"
torchvision = ">=0.15"
kagglehub = "*"
opencv-python-headless = ">=4.8"
scikit-learn = ">=1.3"
matplotlib = ">=3.7"
seaborn = ">=0.13"
streamlit = ">=0.38.0"
pandas = ">=2.0"
numpy = ">=1.24"
tqdm = ">=4.65"
Pillow = ">=10.0"
pyyaml = ">=6.0"
streamlit-webrtc = "0.47.9"
av = ">=10.0"
ultralytics = {git = "https://github.com/mfazrinizar/ultralytics.git", branch = "main"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
